<resources>
    <string name="app_name">PokeWorld</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_LogOut">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_catch_pokemon">Catch Pokemon!</string>
    <string name="menu_and_item">Add Item</string>
    <string name="menu_pokedex">Pokedex</string>
    <string name="menu_about">About Us!</string>
    <string name="menu_pokedex_item">Assign Item</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="about_us_description_1">PokeWorld is your one stop shop for keeping track of all your pesky pokemon.</string>
    <string name="about_us_description_2">In this app you can add any Pokemon you might have caught during your adventures!</string>
    <string name="about_us_description_disclaimer">We work on a trust system! To get the best experience please be truthful with us and yourself!</string>



        <string name="gender_dropdown_text">Gender</string>

        <string-array name="genders">

            <item>Male</item>

            <item>Female</item>

            <item>Neutral</item>


        </string-array>



</resources>