<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_pokemon"
            android:icon="@drawable/ic_menu_pokeball"
            android:title="@string/menu_catch_pokemon" />
        <item
            android:id="@+id/nav_add_item"
            android:icon="@drawable/ic_menu_item_bag_alt"
            android:title="@string/menu_and_item" />
        <!--
        <item
            android:id="@+id/nav_pokedex"
            android:icon="@drawable/ic_menu_pokedex"
            android:title="@string/menu_pokedex" />
            -->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_about" />
    </group>
</menu>