<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="and.andrei.pokeworld.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_pokedex"
            app:destination="@id/nav_pokedex" />
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_nav_home_to_nav_add_pokemon"
            app:destination="@id/nav_add_pokemon" />
        <action
            android:id="@+id/action_nav_home_to_nav_add_item"
            app:destination="@id/nav_add_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_pokemon"
        android:name="and.andrei.pokeworld.view.CatchPokemonFragment"
        android:label="@string/menu_catch_pokemon"
        tools:layout="@layout/fragment_catchpokemon" />
    <fragment
        android:id="@+id/nav_add_item"
        android:name="and.andrei.pokeworld.view.AddIemFragment"
        android:label="@string/menu_and_item"
        tools:layout="@layout/fragment_additem" />

    <fragment
        android:id="@+id/nav_pokedex"
        android:name="and.andrei.pokeworld.view.PokedexFragment"
        android:label="@string/menu_pokedex"
        tools:layout="@layout/fragment_pokedex" >
        <action
            android:id="@+id/action_nav_pokedex_to_nav_pokedex_item"
            app:destination="@id/nav_pokedex_item" />
    </fragment>
    <fragment
        android:id="@+id/nav_pokedex_item"
        android:name="and.andrei.pokeworld.view.PokedexItemFragment"
        android:label="@string/menu_pokedex_item"
        tools:layout="@layout/fragment_pokedex_itemselect" />

    <fragment
        android:id="@+id/nav_about"
        android:name="and.andrei.pokeworld.view.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>